--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@ body {
     &__right {
         width: 65%;
         background: #fff;
+        padding-left: 57px;
     }
     &__wrap {
         max-width: 998px;
@@ -24,3 +25,4 @@ body {
         padding-bottom: 50px;
     }
 }
+
